--- a/package.json
+++ b/package.json
@@ -8,13 +8,19 @@
   "dependencies": {
     "@heroicons/react": "^2.0.13",
     "@reduxjs/toolkit": "^1.9.0",
+    "@stripe/stripe-js": "^1.44.1",
+    "axios": "^1.1.3",
     "firebase": "^9.14.0",
+    "firebase-admin": "^11.2.1",
+    "micro": "^9.4.1",
+    "moment": "^2.29.4",
     "next": "latest",
     "next-auth": "^4.16.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
-    "react-responsive-carousel": "^3.2.23"
+    "react-responsive-carousel": "^3.2.23",
+    "stripe": "^10.17.0"
   },
   "devDependencies": {
     "@tailwindcss/line-clamp": "^0.4.2",
